# Rust-Otus

./: 20220604_1553_how_to_solve  Cargo.toml  task.txt
async_tcp_client/: Cargo.toml
async_tcp_client/src/: main.rs
async_tcp_server/: Cargo.toml
async_tcp_server/src/: lib.rs  main.rs
async_udp_client/: Cargo.toml
async_udp_client/src/: main.rs
async_udp_server/: Cargo.toml
async_udp_server/src/: lib.rs  main.rs
backend_framework_in_action/: .env  Cargo.toml  database.sql  docker-compose.yaml  task.txt
backend_framework_in_action/examples/: smart_home_management.rs  test_reqs
backend_framework_in_action/src/: actions.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
backend_framework_in_action/tests/: integration_tests.rs
builder_pattern/src/: main.rs
command_pattern/src/: main.rs
dyn_rusty_decorator/: Cargo.toml
dyn_rusty_decorator/src/: main.rs
ffi_lib/: Cargo.toml
ffi_lib/examples/: use_case.rs
ffi_lib/src/: lib.rs
io_via_tcp/: Cargo.toml
io_via_tcp/examples/: sample.rs
io_via_tcp/src/: lib.rs  main.rs
io_via_udp_multithread_flavoured/: Cargo.toml
io_via_udp_multithread_flavoured/examples/: sample.rs
io_via_udp_multithread_flavoured/src/: lib.rs  main.rs
l0_guessing_game/src/: main.rs
modulized_and_tested_shp/: task.txt
rusty_oop/: Cargo.toml
rusty_oop/src/: main.rs
rusty_oop_decorator/: Cargo.toml
shp_error_handling/: Cargo.toml  task.txt
smart_home/: Cargo.toml  task.txt
smart_home_library/: Cargo.toml  task.txt
smart_home_planner/: task.txt
smart_outlet_using_gui/: Cargo.toml
(+52 files in other folders)
