[package]
name = "async_tcp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_tcp_server = {path = "../async_tcp_server"}
tokio = {version = "1.20", features = ["net", "macros", "rt-multi-thread", "io-util", "sync"]}
